[package]
name = "plugin-bmc"
version = "0.1.0"
edition = "2021"
authors = ["yogh333", "th0rgal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.7.16"
#nanos_sdk = { git = "https://github.com/yogh333/ledger-nanos-sdk.git", branch = "feat/libcall_support" }
#nanos_ui = { git = "https://github.com/yogh333/ledger-nanos-ui.git", branch = "feat/use_fork_nanos_sdk" }
nanos_sdk = { path = "../ledger-nanos-sdk" }
nanos_ui = { path = "../ledger-nanos-ui" }
#starknet-ff = { version = "0.3.2", default-features = false }

#nanos_sdk = { path = "../ledger-nanos-sdk" }
#nanos_ui = { path = "../ledger-nanos-ui" }

[features]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 'z'
lto = true

[package.metadata.nanos]
api_level = "1"
curve = ["secp256k1"]
path = ["m/2645'"]
flags = "0"
icon = "crab.gif"
icon_small = "starknet_small.gif"
name = "plugin-boilerplate"
